<resources>
    <string name="app_name">Calculator App</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="result">=</string>
    <string name="sum">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="start_bracket">(</string>
    <string name="end_bracket">)</string>
    <string name="square_root">√</string>

    <dimen name="text_size">30sp</dimen>

</resources>